--- a/CPP/Show/CMakeLists.txt
+++ b/CPP/Show/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Show)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Show main.cpp Component.h Decorator.h ConcreteComponent.h ConcreteDecoratorA.h ConcreteDecoratorB.h)
+add_executable(Show main.cpp)
