Chain of re Responsibity-1

--- a/CPP/ChainOfResponsibility/CMakeLists.txt
+++ b/CPP/ChainOfResponsibility/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ChainOfResponsibility)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(ChainOfResponsibility main.cpp Handler.cpp Handler.h AbstractHandler.cpp AbstractHandler.h MonkeyHandler.cpp MonkeyHandler.h SquirrelHandler.cpp SquirrelHandler.h DogHandler.cpp DogHandler.h)
+add_executable(ChainOfResponsibility main.cpp Handler.h AbstractHandler.h MonkeyHandler.h SquirrelHandler.h DogHandler.h)
