--- a/CPP/Command/CMakeLists.txt
+++ b/CPP/Command/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Command)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Command main.cpp)
+add_executable(Command main.cpp Command.h SimpleCommand.h Receiver.h ComplexCommand.h Invoker.h)
