C++ Factory README.md

--- a/CPP/Factory/CMakeLists.txt
+++ b/CPP/Factory/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Factory)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Factory main.cpp)
+add_executable(Factory main.cpp Product.h Creator.h ConcreteProductA.h ConcreteProductB.h ConcreteCreatorA.h ConcreteCreatorB.h)
