--- a/CPP/Prototype/CMakeLists.txt
+++ b/CPP/Prototype/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Prototype)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Prototype main.cpp)
+add_executable(Prototype main.cpp Type.h Prototype.h ConcretePrototype1.h ConcretePrototype2.h Factory.h)
