--- a/CPP/Singleton/CMakeLists.txt
+++ b/CPP/Singleton/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Singleton)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Singleton main.cpp GameSetting.h)
+add_executable(Singleton main.cpp Singleton.h Singleton.cpp )
