--- a/CPP/AbstractFactory/CMakeLists.txt
+++ b/CPP/AbstractFactory/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AbstractFactory)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(AbstractFactory main.cpp ProductA.h ProductA1.h ProductA2.h ProductB.h ProductB1.h ProductB2.h AbstractFactory.h Factory1.h Factory2.h)
+add_executable(AbstractFactory main.cpp Product1.h Product1a.h Product2a.h Product2.h Product1b.h Product2b.h AbstractFactory.h Factory1.h Factory2.h)
