--- a/CPP/Mediator/CMakeLists.txt
+++ b/CPP/Mediator/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Mediator)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Mediator main.cpp BaseComponent.h Mediator.h FirstComponent.h Component2.h ConcreteMediator.h)
+add_executable(Mediator main.cpp BaseComponent.h Mediator.h FirstComponent.h SecondComponent.h ConcreteMediator.h)
