--- a/CPP/Memento/CMakeLists.txt
+++ b/CPP/Memento/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Memento)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Memento main.cpp Memento.cpp Memento.h ConcreteMemento.cpp ConcreteMemento.h Originator.cpp Originator.h Caretaker.cpp Caretaker.h)
+add_executable(Memento main.cpp Memento.h SolverMemento.h Originator.h Caretaker.h)
