--- a/CPP/Visitor/CMakeLists.txt
+++ b/CPP/Visitor/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Visitor)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Visitor main.cpp Visitor.cpp Visitor.h ComponentA.cpp ComponentA.h ComponentB.cpp ComponentB.h Component.cpp Component.h Visitor1.cpp Visitor1.h Visitor2.cpp Visitor2.h)
+add_executable(Visitor main.cpp Visitor.h ComponentA.h ComponentB.h Component.h Visitor1.h Visitor2.h)
