--- a/CPP/Bridge/CMakeLists.txt
+++ b/CPP/Bridge/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Bridge)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Bridge main.cpp Implementation.h ConcreteImplementationA.h ConcreteImplementationB.h Abstraction.h ExtendedAbstraction.h)
+add_executable(Bridge main.cpp Implementation.h Abstraction.h ConcreteImplementationA.h)
