--- a/CPP/AbstractFactory3/CMakeLists.txt
+++ b/CPP/AbstractFactory3/CMakeLists.txt
@@ -3,4 +3,4 @@ project(AbstractFactory3)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(AbstractFactory3 main.cpp AbstractFactory.h AbstractProductA.h AbstractProductB.h ConcreteFactory1.h ConcreteFactory2.h ProductA1.h ProductA2.h ProductB1.h ProductB2.h)
+add_executable(AbstractFactory3 main.cpp SystemManagementFactory.h ConfigurationManager.h OperationManager.h ConcreteFactory1.h ConcreteFactory2.h IBMConfiguration.h UnisysConfiguration.h IBMOperation.h UnisysOperation.h)
