--- a/CPP/Builder/CMakeLists.txt
+++ b/CPP/Builder/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Builder)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Builder main.cpp Product.h Builder.h SolidBuilder.h Director.h)
+add_executable(Builder main.cpp Product.h Builder.h ConcreteBuilder.h Director.h)
