--- a/CPP/Factory/CMakeLists.txt
+++ b/CPP/Factory/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.19)
 project(Factory)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Factory main.cpp Product.h Creator.h ConcreteProductA.h ConcreteProductB.h ConcreteCreatorA.h ConcreteCreatorB.h)
+add_executable(Factory main.cpp Product.h ProductA.h ProductB.h Creator.h)
