--- a/CPP/Factory/Factory2/CMakeLists.txt
+++ b/CPP/Factory/Factory2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Factory2)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Factory2 main.cpp)
+add_executable(Factory2 main.cpp vehicle.h factory.h factory.cpp vehicle.cpp)
