CPP/Adapter/AR3

--- a/CPP/Adapter/AR2/CMakeLists.txt
+++ b/CPP/Adapter/AR2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
-project(AR2)
+project(Adapter)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(AR2 main.cpp Interface1.h Object1.h Interface2.h Object2.h Adapter.h)
+add_executable(Adapter main.cpp Interface1.h Object1.h Interface2.h Object2.h Adapter.h)
