--- a/CPP/Adapter/Show/CMakeLists.txt
+++ b/CPP/Adapter/Show/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Show)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Show main.cpp Target.h Adaptee.h Adapter.h)
+add_executable(Show main.cpp )
