Csharp/Adapter/AR1

--- a/Csharp/Adapter/AR0/Adapter/Adapter/Adapter.csproj
+++ b/Csharp/Adapter/AR0/Adapter/Adapter/Adapter.csproj
@@ -4,7 +4,7 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{99CCAD26-5B09-4C1D-9B31-2A1990320104}</ProjectGuid>
+        <ProjectGuid>{86EBF907-6910-46FF-95BD-57C98EFD3FE0}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Adapter</RootNamespace>
@@ -33,25 +33,18 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-          <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-        </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
         <Reference Include="System.Data" />
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Customer.cs" />
-        <Compile Include="CustomerAdapter.cs" />
-        <Compile Include="CustomerDTO.cs" />
-        <Compile Include="CustomerManager.cs" />
-        <Compile Include="ICustomer.cs" />
+        <Compile Include="Client.cs" />
+        <Compile Include="ClientAdapter.cs" />
+        <Compile Include="IClientAdapter.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-    </ItemGroup>
-    <ItemGroup>
-      <None Include="packages.config" />
+        <Compile Include="ThirdPartyAdapter.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
