--- a/CPP/Creational/Factory/FY1/CMakeLists.txt
+++ b/CPP/Creational/Factory/FY1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(FY1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(FY1 main.cpp Object.cpp ToyFactory.cpp)
+add_executable(FY1 main.cpp Toys.cpp ToyFactory.cpp Toy.h Car.h Bike.h Plane.h)
