--- a/CPP/Creational/Factory/Show/CMakeLists.txt
+++ b/CPP/Creational/Factory/Show/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.21)
+cmake_minimum_required(VERSION 3.23)
 project(Show)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Show main.cpp Product.h ProductA.h ProductB.h Creator.h CreatorA.h CreatorB.h)
+add_executable(Show main.cpp)
