Csharp/Creational/Factory/FY1

--- a/Csharp/Creational/Factory/Show/Show/Show/Show.csproj
+++ b/Csharp/Creational/Factory/Show/Show/Show/Show.csproj
@@ -5,13 +5,14 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{5BCAD54E-77DD-4520-860A-A001F0DDC675}</ProjectGuid>
+        <ProjectGuid>{6D2EF26B-9DA3-4831-BEB8-F5F13F2F5029}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Show</RootNamespace>
         <AssemblyName>Show</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
+        <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
