--- a/Csharp/Creational/Factory/Show/Show/Show/Show.csproj
+++ b/Csharp/Creational/Factory/Show/Show/Show/Show.csproj
@@ -41,6 +41,7 @@
     <ItemGroup>
         <Compile Include="Creator.cs" />
         <Compile Include="Product.cs" />
+        <Compile Include="ProductA.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
