Csharp/Creational/Factory/FY1

--- a/Csharp/Creational/Factory/Show/Show/Show/Show.csproj
+++ b/Csharp/Creational/Factory/Show/Show/Show/Show.csproj
@@ -40,8 +40,10 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Creator.cs" />
+        <Compile Include="CreatorY.cs" />
         <Compile Include="Product.cs" />
         <Compile Include="ProductA.cs" />
+        <Compile Include="ProductB.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
