--- a/Csharp/Creational/Factory/FY3/Factory/Factory/Factory.csproj
+++ b/Csharp/Creational/Factory/FY3/Factory/Factory/Factory.csproj
@@ -4,7 +4,7 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{0EDB8493-A1E5-4307-A53C-E4A4E720C20C}</ProjectGuid>
+        <ProjectGuid>{E18A49E6-3B07-4B47-819F-3BE86D0DC1DD}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Factory</RootNamespace>
@@ -39,16 +39,15 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="BaseCustomerFactory.cs" />
-        <Compile Include="BronzeCustomer.cs" />
-        <Compile Include="BronzeCustomerFactory.cs" />
-        <Compile Include="GoldCustomer.cs" />
-        <Compile Include="GoldCustomerFactory.cs" />
-        <Compile Include="ICustomer.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="SilverCustomer.cs" />
-        <Compile Include="SilverCustomerFactory.cs" />
+        <Compile Include="Properties\Client.cs" />
+        <Compile Include="Properties\Factory1.cs" />
+        <Compile Include="Properties\Factory2.cs" />
+        <Compile Include="Properties\Product1.cs" />
+        <Compile Include="Properties\Product2.cs" />
+        <Compile Include="Properties\Creator.cs" />
+        <Compile Include="Properties\IProduct.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
