--- a/CPP/Creational/AbstractFactory/AF1/CMakeLists.txt
+++ b/CPP/Creational/AbstractFactory/AF1/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.20)
-project(AbstractFactory1)
+cmake_minimum_required(VERSION 3.19)
+project(AbstractFactory)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(AbstractFactory1 Client.cpp CarFactory.cpp CarFactory.h Car.cpp)
+add_executable(AbstractFactory main.cpp AbstractProductA.h ProductA1.h ProductA2.h AbstractProductB.h ProductB1.h ProductB2.h AbstractFactory.h ConcreteFactory1.h ConcreteFactory2.h AbstractFactory.h ConcreteFactory1.h ConcreteFactory2.h AbstractProductA.h AbstractProductB.h ProductA1.h ProductA2.h ProductB1.h ProductB2.h)
