--- a/CPP/Creational/Factory/Factory/CMakeLists.txt
+++ b/CPP/Creational/Factory/Factory/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.22)
-project(Factory)
+cmake_minimum_required(VERSION 3.24)
+project(FY1)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Factory main.cpp Toys.cpp Toy.h Car.h Bike.h Plane.h ToyFactory.h)
+add_executable(FY1 main.cpp)
