--- a/Csharp/Creational/Factory/Show/Factory/Factory/Factory.csproj
+++ b/Csharp/Creational/Factory/Show/Factory/Factory/Factory.csproj
@@ -39,17 +39,16 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Builder.cs" />
-        <Compile Include="Client.cs" />
-        <Compile Include="Creator.cs" />
-        <Compile Include="CreatorX.cs" />
-        <Compile Include="CreatorY.cs" />
-        <Compile Include="Director.cs" />
-        <Compile Include="Product.cs" />
-        <Compile Include="ProductA.cs" />
-        <Compile Include="ProductB.cs" />
+        <Compile Include="BaseCustomerFactory.cs" />
+        <Compile Include="BronzeCustomer.cs" />
+        <Compile Include="BronzeCustomerFactory.cs" />
+        <Compile Include="GoldCustomer.cs" />
+        <Compile Include="GoldCustomerFactory.cs" />
+        <Compile Include="ICustomer.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="SilverCustomer.cs" />
+        <Compile Include="SilverCustomerFactory.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
