--- a/CPP/Creational/Factory/FY2/CMakeLists.txt
+++ b/CPP/Creational/Factory/FY2/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.22)
-project(F3)
+project(Factory)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(F3 main.cpp Product.h ProductA.h ProductB.h Creator.h CreatorA.h CreatorB.h)
+add_executable(Factory main.cpp Product.h ProductA.h ProductB.h Creator.h CreatorA.h CreatorB.h)
