--- a/CPP/Creational/AbstractFactory/Show/CMakeLists.txt
+++ b/CPP/Creational/AbstractFactory/Show/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Show)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Show main.cpp AbstractProductA.h AbstractProductB.h AbstractFactory.h ProductA1.h ProductB1.h ConcreteFactory2.h ProductA2.h ProductB2.h)
+add_executable(Show main.cpp Toy.h ToyFactory.h)
