--- a/Csharp/Creational/Factory/Show/Factory/Factory.csproj
+++ b/Csharp/Creational/Factory/Show/Factory/Factory.csproj
@@ -39,6 +39,8 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Doll.cs" />
+        <Compile Include="IToy.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
