--- a/Csharp/Creational/Factory/Show/Factory/Factory.csproj
+++ b/Csharp/Creational/Factory/Show/Factory/Factory.csproj
@@ -39,10 +39,13 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Car.cs" />
         <Compile Include="Doll.cs" />
         <Compile Include="IToy.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ToyFactory.cs" />
+        <Compile Include="Train.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
