--- a/CPP/Creational/Factory/Show/CMakeLists.txt
+++ b/CPP/Creational/Factory/Show/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.23)
-project(Show)
+cmake_minimum_required(VERSION 3.24)
+project(Factory)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Show main.cpp)
+add_executable(Factory main.cpp Toy.h Bike.h Car.h Plane.h SantasBag.h ToyFactory.h)
