--- a/CPP/Creational/Factory/Show/CMakeLists.txt
+++ b/CPP/Creational/Factory/Show/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Show)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Show main.cpp Shape.h script/Circle.h Square.h Rectangle.h ShapeFactory.h Circle.h)
+add_executable(Show main.cpp)
