--- a/CPP/Creational/Singleton/Demo/CMakeLists.txt
+++ b/CPP/Creational/Singleton/Demo/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Demo)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Demo Demo.cpp Singleton.h Singleton.cpp)
+add_executable(Demo Demo.cpp)
