--- a/CPP/Creational/AbstractFactory/Show/CMakeLists.txt
+++ b/CPP/Creational/AbstractFactory/Show/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Show)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Show Demo.cpp)
+add_executable(Show Demo.cpp UIFactory.h Button.h Scrollbar.h WindowsUIFactory.h WindowsButton.h WindowsScrollbar.h MacUIFactory.h MacButton.h MacScrollbar.h)
