--- a/Csharp/Creational/AbstractFactory/Show/Show/Show.csproj
+++ b/Csharp/Creational/AbstractFactory/Show/Show/Show.csproj
@@ -39,6 +39,8 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="AbstractFactory.cs" />
+        <Compile Include="FactoryDataItem.cs" />
         <Compile Include="IFactory.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
