--- a/Shows/ShowCPP/Show/CMakeLists.txt
+++ b/Shows/ShowCPP/Show/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ShowCPP)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ShowCPP main.cpp)
+add_executable(ShowCPP main.cpp UIFactory.h Button.h Scrollbar.h WindowsUIFactory.h WindowsButton.h MacUIFactory.h MacButton.h MacScrollbar.h)
