--- a/Shows/ShowCsharp/Show/Show/Show.csproj
+++ b/Shows/ShowCsharp/Show/Show/Show.csproj
@@ -39,6 +39,10 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Director.cs" />
+        <Compile Include="IPizzaBuilder.cs" />
+        <Compile Include="MargheritaPizzaBuilder.cs" />
+        <Compile Include="Pizza.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
