--- a/Shows/ShowCPP/Show/CMakeLists.txt
+++ b/Shows/ShowCPP/Show/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
-project(ShowCPP)
+project(Show)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(ShowCPP main.cpp UIFactory.h Button.h Scrollbar.h WindowsUIFactory.h WindowsButton.h WindowsScrollbar.h MacUIFactory.h MacButton.h MacScrollbar.h)
+add_executable(Show main.cpp Singleton.h Regular.h)
