--- a/Shows/ShowCPP/Show0/CMakeLists.txt
+++ b/Shows/ShowCPP/Show0/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Show0)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(Show0 main.cpp UIFactory.h Button.h Scrollbar.h WindowsUIFactory.h WindowsButton.h WindowsScrollbar.h MacUIFactory.h MacButton.h MacScrollbar.h)
+add_executable(Show0 main.cpp)
