--- a/Shows/ShowCsharp/Show/Show/Show.csproj
+++ b/Shows/ShowCsharp/Show/Show/Show.csproj
@@ -39,6 +39,8 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Address.cs" />
+        <Compile Include="Person.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
