--- a/Csharp/Creational/Builder/Show/Builder/Builder.csproj
+++ b/Csharp/Creational/Builder/Show/Builder/Builder.csproj
@@ -4,11 +4,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{D3E87AB0-63AD-44E0-B8AA-27045C4EF7EB}</ProjectGuid>
+        <ProjectGuid>{0E0310BA-7611-4993-96F1-9D24142BF327}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Show</RootNamespace>
-        <AssemblyName>Show</AssemblyName>
+        <RootNamespace>Builder</RootNamespace>
+        <AssemblyName>Builder</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -39,12 +39,11 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Director.cs" />
-        <Compile Include="IPizzaBuilder.cs" />
-        <Compile Include="MargheritaPizzaBuilder.cs" />
-        <Compile Include="Pizza.cs" />
+        <Compile Include="DrFrankenstein.cs" />
+        <Compile Include="IMonster.cs" />
+        <Compile Include="Monster.cs" />
+        <Compile Include="MonsterBuilder.cs" />
         <Compile Include="Program.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
