--- a/Shows/current/csharp/Builder/Builder/Builder.csproj
+++ b/Shows/current/csharp/Builder/Builder/Builder.csproj
@@ -39,6 +39,10 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="DrFrankenstein.cs" />
+        <Compile Include="IMonster.cs" />
+        <Compile Include="Monster.cs" />
+        <Compile Include="MonsterBuilder.cs" />
         <Compile Include="Program.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
