--- a/CPP/Creational/Prototype/Show/CMakeLists.txt
+++ b/CPP/Creational/Prototype/Show/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.25)
 project(Show)
 
-set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Show main.cpp Prototype.h ConcretePrototype.h)
+add_executable(Show main.cpp Prototype.h ConcretePrototype.h DemoClass.h)
