--- a/CPP/Structural/Adapter/AR1/CMakeLists.txt
+++ b/CPP/Structural/Adapter/AR1/CMakeLists.txt
@@ -3,4 +3,7 @@ project(Adapter)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Adapter main.cpp Adaptee.h Target.h Adapter.h)
+add_executable(Adapter main.cpp
+        Target.h
+        Adaptee.h
+        Adapter.h)
