--- a/CPP/Structural/Adapter/AR1/CMakeLists.txt
+++ b/CPP/Structural/Adapter/AR1/CMakeLists.txt
@@ -4,4 +4,7 @@ project(Adapter)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Adapter main.cpp
+        Target.h
+        Adaptee.h
+        Adapter.h
 )
