--- a/CPP/Structural/Adapter/example/CMakeLists.txt
+++ b/CPP/Structural/Adapter/example/CMakeLists.txt
@@ -4,4 +4,6 @@ project(example)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(example main.cpp
-        Target.h)
+        Target.h
+        Adaptee.h
+        Adapter.h)
