--- a/CPP/Structural/Adapter/example2/CMakeLists.txt
+++ b/CPP/Structural/Adapter/example2/CMakeLists.txt
@@ -3,4 +3,9 @@ project(example2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(example2 main.cpp)
+add_executable(example2 main.cpp
+        Interface1.h
+        Interface2.h
+        Object1.h
+        Object2.h
+        Adapter.h)
