--- a/Csharp/Creational/Singleton/Example2/Singleton/Singleton/Singleton.csproj
+++ b/Csharp/Creational/Singleton/Example2/Singleton/Singleton/Singleton.csproj
@@ -5,11 +5,11 @@
     <PropertyGroup>
         <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
         <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{6E807A68-3767-4BA2-A930-B8FFAFE14221}</ProjectGuid>
+        <ProjectGuid>{6D6E4205-C7B0-4BC6-81FA-299DC8A264A8}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Show</RootNamespace>
-        <AssemblyName>Show</AssemblyName>
+        <RootNamespace>Singleton</RootNamespace>
+        <AssemblyName>Singleton</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -40,9 +40,9 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="OnlyOne.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
-        <Compile Include="Singleton.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
