--- a/CPP/Structural/Adapter/Example3/CMakeLists.txt
+++ b/CPP/Structural/Adapter/Example3/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.26)
-project(example)
+project(Example3)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(example main.cpp
+add_executable(Example3 main.cpp
         Target.h
         Adaptee.h
         Adapter.h)
