--- a/CPP/Structural/Adapter/Example/CMakeLists.txt
+++ b/CPP/Structural/Adapter/Example/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.26)
-project(eample3)
+project(Example)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(eample3 main.cpp
+add_executable(Example main.cpp
         Adaptee.h
         Adaptee.cpp
         Target.h
