--- a/CPP/Structural/Adapter/Example/CMakeLists.txt
+++ b/CPP/Structural/Adapter/Example/CMakeLists.txt
@@ -4,8 +4,10 @@ project(Example)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(Example main.cpp
-        Adaptee.h
-        Adaptee.cpp
-        Target.h
-        Adapter.h
-        Adapter.cpp)
+        OldPrinter.h
+        OldPrinter.cpp
+        Document.h
+        Document.cpp
+        PrinterAdapter.h
+        PrinterAdapter.cpp
+)
