--- a/CPP/Behavioral/Visitor/Example/CMakeLists.txt
+++ b/CPP/Behavioral/Visitor/Example/CMakeLists.txt
@@ -3,4 +3,9 @@ project(Example)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Example main.cpp)
+add_executable(Example main.cpp Visitor.h
+        Component.h
+        ComponentA.h
+        ComponentB.h
+        Visitor1.h
+        Visitor2.h)
