--- a/CPP/Behavioral/Visitor/Example2/CMakeLists.txt
+++ b/CPP/Behavioral/Visitor/Example2/CMakeLists.txt
@@ -3,4 +3,10 @@ project(Example2)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Example2 main.cpp)
+add_executable(Example2 main.cpp
+        Visitor.h
+        Element.h
+        Circle.h
+        Rectangle.h
+        ConcreteVisitors.h
+        AreaVisitor.h)
