--- a/CPP/Behavioral/Memento/Example/CMakeLists.txt
+++ b/CPP/Behavioral/Memento/Example/CMakeLists.txt
@@ -3,4 +3,7 @@ project(Example)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Example main.cpp)
+add_executable(Example main.cpp
+        Memento.h
+        Originator.h
+        Caretaker.h)
