--- a/CPP/Behavioral/Memento/Example2/CMakeLists.txt
+++ b/CPP/Behavioral/Memento/Example2/CMakeLists.txt
@@ -1,6 +1,9 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.26)
 project(Memento)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Memento main.cpp Memento.h SolverMemento.h Originator.h Caretaker.h)
+add_executable(Example2 main.cpp
+        FairyTaleMemento.h
+        EnchantedBook.h
+        StoryKeeper.h)
