--- a/Csharp/Behavioral/Memento/Example3/Memento/Memento/Memento.csproj
+++ b/Csharp/Behavioral/Memento/Example3/Memento/Memento/Memento.csproj
@@ -40,6 +40,10 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Caretaker.cs" />
+        <Compile Include="IMemento.cs" />
+        <Compile Include="Memento.cs" />
+        <Compile Include="Originator.cs" />
         <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
