--- a/CPP/Behavioral/Mediator/Example3/CMakeLists.txt
+++ b/CPP/Behavioral/Mediator/Example3/CMakeLists.txt
@@ -1,12 +1,7 @@
 cmake_minimum_required(VERSION 3.26)
-project(untitled)
+project(Mediator)
 
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(untitled main.cpp
-        Superhero.h
-        JusticeLeagueMediator.h
-        Batman.h
-        JusticeLeagueMediatorImpl.h
-        Superman.h
-        WonderWoman.h)
+)
